import { test, describe, expect } from "vitest";
import { readFileSync } from "fs";
import { getAttributeModifiedCode } from "../src";
import path from "path";

describe("getAttributeModifiedCode", () => {
  const getTestCodeByFileName = (fileName: string) =>
    readFileSync(
      path.join(__dirname, "./data/getAttributeModifiedCode", fileName),
      "utf8"
    );

  const testCases = [
    {
      name: "jsx, one line component",
      inputCode: getTestCodeByFileName("Card.jsx"),
      targetComponentLine: 7,
      attribute: "className",
      value: "mod text-xl mb-2",
    },
    {
      name: "jsx, multi line component",
      inputCode: getTestCodeByFileName("Card.jsx"),
      targetComponentLine: 8,
      attribute: "className",
      value: "mod text-base",
    },
    {
      name: "tsx, one line component",
      inputCode: getTestCodeByFileName("Card.tsx"),
      targetComponentLine: 16,
      attribute: "className",
      value: "mod text-xl mb-2",
    },
    {
      name: "tsx, multi line component",
      inputCode: getTestCodeByFileName("Card.tsx"),
      targetComponentLine: 17,
      attribute: "className",
      value: "mod text-base",
    },
    {
      name: "jsx, no className one line component",
      inputCode: getTestCodeByFileName("NoClassNameComponent.jsx"),
      targetComponentLine: 5,
      attribute: "className",
      value: "mod",
    },
    {
      name: "jsx, no className multi line component",
      inputCode: getTestCodeByFileName("NoClassNameComponent.jsx"),
      targetComponentLine: 6,
      attribute: "className",
      value: "mod",
    },
  ];

  testCases.forEach(
    ({ name, inputCode: code, targetComponentLine, attribute, value }) => {
      test(name, () => {
        const arg = { code, targetComponentLine, attribute, value };
        const result = getAttributeModifiedCode(arg);
        expect(result).toMatchSnapshot();
      });
    }
  );
});
